# LoafrSystem

./: .gitignore  README.md
app/: CMakeLists.txt  main.cc
app/include/: LoafrModel.h  NewDataEntry.h  Search.h  Sort.h  filter.h
app/scripts/: build.sh  clean.sh
app/src/: LoafrModel.cc  NewDataEntry.cc  Search.cc  Sort.cc  filter.cc
app/tests/: LoafrModel_unittests.cc  NewDataEntry_unittests.cc  Search_unittests.cc  Sort_unittests.cc  filter_unittests.cc  loafrmodel_tests.cc  test1.txt
docs/: Doxyfile
docs/html/: LoafrModel_8h.html  LoafrModel_8h_source.html  NewDataEntry_8h_source.html  Search_8h.html  Search_8h_source.html  Sort_8h_source.html  _loafr_model_8h_source.html  _new_data_entry_8h_source.html  _search_8h_source.html  _sort_8h_source.html  abi__macros_8hpp_source.html  adl__serializer_8hpp_source.html  annotated.html  begin_8hpp_source.html  binary__reader_8hpp_source.html  binary__writer_8hpp_source.html  byte__container__with__subtype_8hpp_source.html  classFilter-members.html  classFilter.html  classFilterTest-members.html  (+491 more)
src/: Makefile  filtered_output.json  loafr  main.cc
test log files generator/: 2023-11-14-1.txt  2023-11-14-2.txt
testlogs/: 2023-11-14-1-out-1.json  2023-11-14-1-out-2.json  2023-11-14-1-out-3.json  2023-11-14-1-out.json  2023-11-14-3.txt  2023-11-14-4.txt  2023-11-14-5.txt  2023-11-14-6.txt  2023-11-14-7.txt  Event-11-14-1.txt  Event-11-14-2.txt  Event-11-14-3.txt  Event-11-14-4-out-1.json  Event-11-14-4-out-2.json  Event-11-14-4-out-3.json  Event-11-14-4-out.json  Event-11-14-4.txt  generate_test_logs.py
(+485 files in other folders)
